// 定义项目 API 的 proto 文件 可以同时描述 gRPC 和 HTTP API
// protobuf 文件参考:
//  - https://developers.google.com/protocol-buffers/
syntax = "proto3";

package protos;

service Dister {
    rpc prepare(TaskProcessRequest) returns (TaskProcessResponse){}
    rpc commit(TaskCommitRequest) returns (TaskCommitResponse) {}
    rpc state(StateRequest) returns (StateResponse) {}
}


message TaskProcessRequest {
    string id = 1;
    int32 threads = 2;
    int32 count_limit = 3;
    int32 time_limit = 4;
    Task task = 5;
}

message Validator {
    enum ValidType {
        // less than
        LT = 0;
        // less than or equal to
        LE = 1;
        // equal to
        EQ = 2;
        // not equal to
        NE = 3;
        // greater than or equal to
        GE = 4;
        // greater than
        GT = 5;
        // in
        IN = 6;
    }
    string name = 1;
    ValidType vt = 2;
    string value = 3;
}

message Task {
    enum Method {
        GET = 0;
        POST = 1;
    }
    string url = 1;
    string path = 2;
    Method method = 3;
    bytes body = 4;
    string script = 5;
    repeated Validator vs = 6;
}

message TaskProcessResponse {
    enum PrepareType {
        SUCCESS = 0;
        FAILD = 1;
    }
    string id = 1;
    PrepareType pt = 2;
}

message TaskCommitRequest {
    string id = 1;
}

message TaskCommitResponse {
    string id = 1;
}

message StateRequest {
}

message StateResponse {
    enum StatueType {
        Busy = 0;
        Idle = 1;
        UnReady = 2;
    }
    StatueType st = 1;
    repeated string tasks = 2;
}
